--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Micro task onespacemedia 29.03.2015",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "watch": "./node_modules/gulp/bin/gulp.js watch"
   },
   "repository": {
     "type": "git",
@@ -20,5 +21,8 @@
     "gulp": "^3.9.1",
     "gulp-clean-css": "^3.0.4",
     "gulp-sass": "^3.1.0"
+  },
+  "dependencies": {
+    "gulp": "^3.9.1"
   }
 }
