--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "onespacemedia",
   "version": "1.0.0",
-  "description": "Micro task onespacemedia 29.03.2015",
+  "description": "Micro task onespacemedia 29.03.2017",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "./node_modules/gulp/bin/gulp.js watch"
+    "postinstall": "./node_modules/gulp/bin/gulp.js sass",
+    "watch": "./node_modules/gulp/bin/gulp.js watch",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -23,6 +25,8 @@
     "gulp-sass": "^3.1.0"
   },
   "dependencies": {
-    "gulp": "^3.9.1"
+    "connect": "^3.6.0",
+    "gulp": "^3.9.1",
+    "server-static": "^1.9.0"
   }
 }
